# exp-pkg

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  deep-research-report (1).md  mkdocs.yml  performance-budgets.json  plan.md  pyproject.toml  refactor.md  repo_profile.yaml  todo.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
docs/: artifact-namespaces.md  artifact_contract.md  artifact_contract_v1.md  cli_command_spec_v1.md  getting-started.md  identity_provenance.md  index.md  luxem_2023_gap_analysis.md  performance.md  pose_3d_design.md  roadmap.md  scientific-repo-integration.md
docs/api/: adapters.md  codecs.md  compat.md  exchange.md  formats.md  model.md  project.md  services.md  workspace.md
docs/architecture/: experiment-ontology.md  experimental-store.md  media-io.md  multimodal-session.md  posix-durable-store-spec.md  storage-direction.md
docs/development/: local-ci.md  release.md
docs/ontology/: OBJECTS.md
docs/reference/: adapters.md  codecs.md  compat.md  exchange.md  formats.md  model.md  project.md  services.md  workspace.md
docs/stylesheets/: extra.css
environment/: environment.yml  run-in-env.sh  setup.sh
environment/linux/: requirements.txt  setup.sh
environment/macos/: environment.yml  setup.sh
papers/: luxem_2023_open_source_tools_behavioral_video_analysis_elife_79305.txt  pmid_36951911.xml
schemas/: experiment.schema.json  ontology.json  project.schema.json  recording-session.schema.json
scripts/: check_performance_budgets.py  fetch_fiber_photometry_fixtures.py  generate_export_stubs.py  generate_ontology_schemas.py
src/posetta/: __init__.py  __main__.py  api.py  cli.py
src/posetta/adapters/: __init__.py  dlc.py  sleap.py
src/posetta/config/: __init__.py  definitions.py  loaders.py
src/posetta/core/: __init__.py  colors.py  json_utils.py  path_ops.py  path_registry.py  raise_scopes.py  skeleton.py
src/posetta/formats/: __init__.py  project.py  siesta.py  siesta_store.py
src/posetta/io/: __init__.py  framehub.py  images.py  manifest.py  project_artifact.py  project_layout.py  project_workspace.py  skeleton_io.py  skeleton_loaders.py  video.py  video_backends.py  video_writer_backend.py  workspace_snapshot_backend.py
src/posetta/model/: __init__.py
src/posetta/nn/: __init__.py  version.py
src/posetta/services/: __init__.py  workspace.py
src/xpkg/: __init__.py  __main__.py  api.py  cli.py  inspection.py  json_utils.py  ontology.py  payloads.py  readers.py  version.py
src/xpkg/_core/: __init__.py  colors.py  hashing.py  json_utils.py  logging_utils.py  path_registry.py  time.py  video_contract.py
src/xpkg/adapters/: __init__.py  detectron2.py  dlc.py  labels.py  mediapipe.py  mmpose.py  openpose.py  primitives.py  sleap.py  vicon.py
src/xpkg/cli/: __init__.py  app.py  main.py  shared.py
src/xpkg/codecs/: __init__.py  labels.py  vicon.py
src/xpkg/compat/: __init__.py
src/xpkg/config/: __init__.py  definitions.py  loaders.py
src/xpkg/core/: __init__.py  json_utils.py  logging_utils.py  path_registry.py  skeleton.py  video_contract.py
src/xpkg/exchange/: __init__.py  vicon.py
src/xpkg/formats/: __init__.py  archive.py  archive_store.py  project.py  siesta.py  siesta_store.py
src/xpkg/io/: __init__.py  archive_io.py  archive_store.py  calibration.py  experiment_json.py  hdf5.py  images.py  manifest.py  masked_brightness.py  metrics_hdf5.py  pose_hdf5.py  pose_json.py  prediction_attachment.py  predictions.py  project_artifact.py  project_artifacts.py  project_figures.py  project_inspection.py  project_layout.py  project_metadata.py  project_segmentation.py  project_validation.py  project_workspace.py  session_json.py  skeleton_io.py  skeleton_loaders.py  video.py  workspace_durable_store.py  workspace_snapshot_backend.py  workspace_state.py
src/xpkg/media/: __init__.py  backend_utils.py  backends.py  frame_sampling.py  images.py  pyav.py  reader_backends.py  readers.py  todo.md  transforms.py  video.py  writers.py
src/xpkg/model/: __init__.py  __init__.pyi  _exports.py  _metadata_validation.py  behavior.py  calibration.py  emg.py  ephys.py  events.py  experiment.py  experiment_actions.py  force.py  identity.py  labels.py  labels_cache.py  labels_export.py  labels_merge.py  labels_query.py  labels_tracks.py  metadata.py  pose_adapters.py  pose_naming.py  reporting.py  session.py  session_actions.py  signals.py  stubs.py  (+3 more)
tests/: __init__.py  calibration_helpers.py  factories.py  test_adapter_migration.py  test_api_surface.py  test_archive_contract.py  test_archive_manifest.py  test_archive_store_checksums.py  test_archive_store_corruption_recovery.py  test_archive_store_journal_recovery.py  test_archive_store_object_store.py  test_archive_store_oplog.py  test_archive_store_superblock_selection.py  test_calibration_cli.py  test_cli.py  test_cli_shared.py  test_datasheet_cli.py  test_detectron2_import.py  test_dlc_import.py  test_durable_store_checksums.py  test_durable_store_superblock_selection.py  test_hdf5_tables.py  test_inspection.py  test_json_utils.py  test_labels_json_format.py  test_labels_model_contracts.py  test_labels_query.py  test_manifest.py  test_masked_brightness_io.py  test_media_backends.py  test_media_images.py  test_mediapipe_import.py  test_metrics_hdf5.py  test_mmpose_import.py  test_model_card_cli.py  test_normalized_image_sequence_import.py  test_ontology_schemas.py  test_openpose_import.py  test_package_metadata.py  test_payloads.py  (+52 more)
tests/fixtures/: boris_aggregated_legacy.csv  boris_tabular_events.csv  bsoid_labels_pose.csv  bsoid_runlen.csv  keypoint_moseq_syllables.csv  simba_machine_results.csv
tests/io/: __init__.py  test_experiment_json.py  test_session_json.py
tests/model/: test_behavior.py  test_calibration_models.py  test_emg.py  test_ephys.py  test_identity.py  test_metadata_models.py  test_pose_adapters.py  test_pose_csv_matching.py  test_pose_naming.py  test_pose_trajectory.py  test_reporting_models.py  test_session_models.py
tests/real_data/: test_real_data_manifest.py
(+287 files in other folders)
