[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "exp-pkg"
version = "0.1.0"
description = "Workspace-first toolkit for behavior-centered experiment data and portable project artifacts."
readme = "README.md"
requires-python = ">=3.12"
license = "LicenseRef-Proprietary"
dependencies = [
  "c3d>=0.6,<1",
  "cattrs>=24.1",
  "h5py>=3.11,<4",
  "imageio>=2.36",
  "imageio-ffmpeg>=0.5",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "tables>=3.9",
]

[project.urls]
Homepage = "https://github.com/Alfredo-Sandoval/exp-pkg"
Repository = "https://github.com/Alfredo-Sandoval/exp-pkg"
Documentation = "https://github.com/Alfredo-Sandoval/exp-pkg/tree/main/docs"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "ruff>=0.9",
  "twine>=6.1",
  "ty>=0.0.20",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-material>=9.5",
  "mkdocstrings[python]>=0.24",
]

[project.scripts]
xpkg = "xpkg.cli:main"

[tool.hatch.build.targets.sdist]
exclude = [
  "/deep-research-report (1).md",
  "/refactor.md",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xpkg"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "realdata: opt-in integration tests that require XPKG_REAL_DATA_ROOT",
]
