[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "exp-pkg"
dynamic = ["version"]
description = "Typed data I/O and portable project packaging for multimodal neuroscience experiments."
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [
  { name = "Alfredo Sandoval" },
  { name = "Joseph Sandoval" },
]
maintainers = [
  { name = "Alfredo Sandoval" },
  { name = "Joseph Sandoval" },
]
keywords = [
  "behavior",
  "electrophysiology",
  "fiber-photometry",
  "io",
  "neuroscience",
  "patch-clamp",
  "pose-estimation",
  "sleap",
  "video",
  "project",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "cattrs>=24.1,<27",
  "h5py>=3.11,<4",
  "imageio>=2.36,<3",
  "imageio-ffmpeg>=0.5,<1",
  "numpy>=1.26,<3",
  "opencv-python-headless>=4.10,<5",
  "pandas>=2.2,<4",
  "pyarrow>=23.0.1,<24",
  "pyyaml>=6.0,<7",
  "rich>=13.7,<16",
  "tables>=3.9,<4",
  "typer>=0.26,<1",
]

[project.urls]
Homepage = "https://github.com/Alfredo-Sandoval/exp-pkg"
Repository = "https://github.com/Alfredo-Sandoval/exp-pkg"
Documentation = "https://github.com/Alfredo-Sandoval/exp-pkg/tree/main/docs"
Issues = "https://github.com/Alfredo-Sandoval/exp-pkg/issues"
Changelog = "https://github.com/Alfredo-Sandoval/exp-pkg/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "h5py-stubs==0.1.2",
  "hypothesis>=6.156,<7",
  "pandas-stubs==3.0.3.260530",
  "pyarrow-stubs==20.0.0.20260625",
  "pyright==1.1.411",
  "pytest>=8.3,<9",
  "pytest-cov>=5,<8",
  "ruff>=0.9,<1",
  "supervision>=0.28,<0.29",
  "twine>=6.1,<7",
]
docs = [
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "mkdocstrings[python]>=0.24,<1",
]
media-rich = [
  "av>=16,<17",
]
dl = [
  "torch>=2.11,<2.12",
  "torchcodec>=0.11,<0.12",
  "torchvision>=0.26,<0.27",
]
inference = [
  "onnxruntime>=1.24,<2",
]
mlx = [
  "mlx>=0.31,<1",
]
nvidia = [
  "torch>=2.11,<2.12",
  "torchcodec>=0.11,<0.12",
  "torchvision>=0.26,<0.27",
]
segmentation-overlays = [
  "supervision>=0.28,<0.29",
]
vision = [
  "kornia>=0.8,<1",
  "supervision>=0.28,<0.29",
  "torch>=2.11,<2.12",
]
hardware-accel = [
  "mlx>=0.31,<1",
  "torch>=2.11,<2.12",
  "torchcodec>=0.11,<0.12",
  "torchvision>=0.26,<0.27",
]
media-dl = [
  "av>=16,<17",
  "decord>=0.6,<1; platform_machine == 'x86_64' or platform_machine == 'AMD64'",
  "kornia>=0.8,<1",
  "mlx>=0.31,<1",
  "onnxruntime>=1.24,<2",
  "torch>=2.11,<2.12",
  "torchcodec>=0.11,<0.12",
  "torchvision>=0.26,<0.27",
]
tdt = [
  "tdt>=0.6",
]

[project.scripts]
xpkg = "xpkg.cli:main"

[tool.hatch.version]
path = "src/xpkg/version.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/AGENTS.md",
  "/CLAUDE.md",
  "/.gitignore",
  "/papers",
  "/plan.md",
  "/todo.md",
  "/.claude",
  "/.codex",
  "/.agents",
  "/.gitnexus",
  "/.pytest_cache",
  "/.ruff_cache",
  "/.venv",
  "/site",
  "/dist",
  "/data",
  "/datasets",
  "/real_data",
  "/vendor_data",
  "/external",
  "/results",
  "/outputs",
  "/scratch",
  "/tmp",
  "/tests/vendor_data",
  "/xpkg-real-data.json",
  "**/.xpkg",
  "**/.xpkg/**",
  "**/*.expkg",
]

[tool.hatch.build.targets.wheel]
packages = ["src/xpkg"]

[tool.hatch.build.targets.wheel.force-include]
"schemas/project.schema.json" = "xpkg/schemas/project.schema.json"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = []

[tool.pyright]
include = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
enableTypeIgnoreComments = false

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = '-ra -m "not realdata and not vendorfixtures"'
markers = [
  "realdata: opt-in integration tests that require XPKG_REAL_DATA_ROOT",
  "vendorfixtures: opt-in external vendor fixture tests",
]
# NOTE: `--cov` is intentionally NOT added to addopts. Enabling coverage on
# every run slows the suite and interferes with debuggers/breakpoints. Use the
# `make coverage` target (or pass --cov explicitly) when a report is wanted.

[tool.coverage.run]
# Measure the installed/importable `xpkg` package.
source = ["xpkg"]
branch = true

[tool.coverage.report]
show_missing = true
precision = 1
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "@(abc\\.)?abstractmethod",
]
# Measured 74.5% combined coverage on 2026-07-12 (`make coverage`, 818 tests).
# Keep two points of tolerance for optional-dependency variation.
fail_under = 72
